[workspace]
members = [
    "crates/engine-runtime",
    "crates/engine-sdk",
    "crates/apps/*",
]
resolver = "2"

[profile.release]
# Maximize performance for your game loop
opt-level = 3
lto = "fat"      # Link-Time Optimization for faster cross-crate code
codegen-units = 1 # Better optimizations at the cost of slower compile time
panic = "abort"   # Smaller binary and slightly faster code
strip = "symbols"     # Removes the ~20MB of text names for functions