[package]
name = "engine-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
engine-sdk = { path = "../engine-sdk" }
diagram-app = { path = "../apps/diagram-app" }
wgpu-ui = { path = "../wgpu-ui" }

# cgmath = "0.18.0"
# bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4.0"
wgpu_text = "29.0.0"
wgpu = "29.0.1"

[target.'cfg(windows)'.dependencies]
winit = { version = "0.30.13", default-features = false, features = ["rwh_06"] }

[target.'cfg(unix)'.dependencies]
wgpu = { version = "29.0.1", default-features = false, features = ["wgsl", "vulkan"] }

[profile.dev]
opt-level = 1

[profile.release]
# Maximize performance for your game loop
opt-level = 3
lto = "fat"      # Link-Time Optimization for faster cross-crate code
codegen-units = 1 # Better optimizations at the cost of slower compile time
panic = "abort"   # Smaller binary and slightly faster code
strip = "symbols"     # Removes the ~20MB of text names for functions