[package]
name = "engine-sdk"
version = "0.1.0"
edition = "2024"

# No dependencies

[profile.release]
# Maximize performance for your game loop
# opt-level = 3
# lto = "fat"      # Link-Time Optimization for faster cross-crate code
# codegen-units = 1 # Better optimizations at the cost of slower compile time
# panic = "abort"   # Smaller binary and slightly faster code
# strip = "symbols"     # Removes the ~20MB of text names for functions