[package]
name = "diagram-app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib"]

[dependencies]
engine-sdk = { path = "../../engine-sdk" }
winit = { version = "0.30.13", default-features = false }  # for MouseButton only
wgpu_text = "29.0.0"

[profile.release]
# Maximize performance for your game loop
opt-level = 3
lto = "fat"      # Link-Time Optimization for faster cross-crate code
codegen-units = 1 # Better optimizations at the cost of slower compile time
panic = "abort"   # Smaller binary and slightly faster code
strip = "symbols"     # Removes the ~20MB of text names for functions